# neoview

./: .gitignore  AGENTS.md  ARCHIVE_THUMBNAIL_OPTIMIZATION.md  CACHE_AND_PROGRESSBAR_UPGRADE.md  CHANGELOG.md  CHANGES.md  COMPLETE_UPSCALE_MIGRATION.md  COMPLETE_UPSCALE_SYSTEM.md  DATABASE_PATH_FIX.md  FEATURE_REQUEST_SUMMARY.md  FILESYSTEM_ARCHIVE_COMPLETE.md  FIX_DATABASE.md  FRONTEND_INTEGRATION_TODO.md  FULL_IMPLEMENTATION_COMPLETE.md  GENERIC_UPSCALE_GUIDE.md  HOVER_PAN_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_FINAL_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_IMPLEMENTATION_GUIDE.md  MIGRATION_SUMMARY.md  MODEL_STRUCTURE.md  NEOVIEW_README.md  NEOVIEW_REWRITE_GUIDE.md  OPTIMIZATION_SUMMARY.md  PANEL_SYSTEM_SUMMARY.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PROGRESSBAR_AND_PANEL_FIXES.md  PROJECT_ARCHIVE_REPORT.md  PROJECT_SUMMARY.md  PYO3_FRONTEND_COMPLETE.md  PYO3_INTEGRATION.md  PYO3_MIGRATION_COMPLETE.md  PYO3_UPSCALE_SYSTEM.md  (+76 more)
.agent/: NEEVIEW_OPTIMIZATION_GUIDE.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.iflow/: iflow.md
doc/: THUMBNAIL_BATCH_CLI.md
docs/: ADD_NEW_FEATURES.md  ADVANCED_OPTIMIZATION_TODO.md  IMAGE_TRIM_SYSTEM_DESIGN.md  MEMORY_LEAK_AUDIT_REPORT.md  MEMORY_LEAK_CHECKLIST.md  (+39 more)
src-python/: main.py  pyproject.toml  requirements.txt
src-python/api/: archive.py  book.py  directory.py  emm.py  epub.py  files.py  metadata.py  stream.py  system.py  thumbnail.py  upscale.py  video.py
src-python/core/: archive_manager.py  book_manager.py  epub_manager.py  fs_manager.py  stream_manager.py  thumbnail_generator.py
src-python/db/: thumbnail_db.py
src-python/models/: schemas.py
src-python/tests/: conftest.py  test_archive.py  test_book.py  test_directory.py  test_epub.py  test_files.py  test_health.py  test_metadata.py  test_schemas.py  test_stream.py  test_thumbnail.py
src-tauri/: .gitignore  ARCHIVE_OPTIMIZATION.md  Cargo.toml  neoview_context_menu.reg  tauri.conf.json  thumbnails.db
src-tauri/.cache/thumbnails/: thumbnails.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: README.md  check_deps.py  start_service.py  test_thumbnail_system.py  thumbnail_service.py  upscale_wrapper.py
src-tauri/src/: lib.rs  main.rs  main_cli.rs  tray.rs
src-tauri/src/commands/: archive_cache_commands.rs  archive_service_commands.rs  archive_viewer_commands.rs  benchmark_commands.rs  book_commands.rs  comparison_commands.rs  default.rs  dimension_commands.rs  emm_metadata_commands.rs  explorer_context_menu_commands.rs  fs_commands.rs  generic_upscale_commands.rs  image_commands.rs  image_data_commands.rs  image_stream_commands.rs  metadata_commands.rs  mod.rs  ollama_commands.rs  page_commands.rs  protocol_commands.rs  pyo3_colorize_commands.rs  pyo3_upscale_commands.rs  python_thumbnail_commands.rs  sr_vulkan_commands.rs  startup_config_commands.rs  stream_commands.rs  streaming_commands.rs  system_monitor_commands.rs  task_queue_commands.rs  thumbnail_commands.rs  thumbnail_settings_commands.rs  thumbnail_v3_commands.rs  thumbnail_v4_commands.rs  upscale_commands.rs  upscale_scheduler_commands.rs  upscale_service_commands.rs  upscale_settings_commands.rs  video_commands.rs  window_commands.rs
src-tauri/src/commands/benchmark_commands/: archive_benchmark.rs  image_benchmark.rs  mod.rs  realworld_benchmark.rs  thumbnail_benchmark.rs  types.rs  wic_benchmark.rs
src-tauri/src/commands/fs_commands/: archive_ops.rs  cache_ops.rs  index_ops.rs  mod.rs  read_ops.rs  types.rs  write_ops.rs
src-tauri/src/commands/thumbnail_commands/: batch_ops.rs  emm_commands.rs  generation.rs  maintenance_commands.rs  mod.rs  rating_commands.rs  retrieval.rs  types.rs
src-tauri/src/core/: app_context.rs  archive.rs  archive_cache.rs  archive_index.rs  archive_index_builder.rs  archive_index_cache.rs  archive_instance_cache.rs  archive_page_cache.rs  archive_prefetcher.rs  archive_preheat.rs  archive_service.rs  archive_viewer.rs  async_thumbnail_processor.rs  background_scheduler.rs  batch_write.rs  blob_registry.rs  book_manager.rs  buffer_pool.rs  cache_index_db.rs  custom_protocol.rs  data_source.rs  dimension_cache.rs  dimension_scanner.rs  directory_cache.rs  directory_cache_db.rs  directory_stream.rs  ebook.rs  explorer_context_menu.rs  fast_path.rs  file_indexer.rs  fs_manager.rs  generic_upscaler.rs  http_bridge.rs  image_cache.rs  image_loader.rs  image_loader_mode.rs  load_command_queue.rs  lru_image_cache.rs  manga_janai_backend.rs  mmap_archive.rs  (+36 more)
src-tauri/src/core/archive/: cache.rs  image_ops.rs  mod.rs  rar_handler.rs  sevenz_handler.rs  types.rs  utils.rs  zip_handler.rs
src-tauri/src/core/archive_manager/: mod.rs  rar_handler.rs  sevenz_handler.rs  zip_handler.rs
src-tauri/src/core/image_decoder/: mod.rs  scaler.rs  traits.rs  types.rs  unified.rs
src-tauri/src/core/image_decoder/backends/: image_crate.rs  jxl.rs  mod.rs  wic.rs
src-tauri/src/core/job_engine/: job.rs  mod.rs  scheduler.rs  worker.rs
src-tauri/src/core/page_frame/: builder.rs  calculator.rs  context.rs  element.rs  error.rs  frame.rs  mod.rs  page.rs  position.rs  range.rs  snapshot.rs  stretch.rs
src-tauri/src/core/page_manager/: book_context.rs  file_proxy.rs  memory_pool.rs  mod.rs
src-tauri/src/core/thumbnail_db/: ai_translation.rs  batch_ops.rs  compression.rs  crud.rs  emm_ops.rs  maintenance.rs  mod.rs  rating_ops.rs  schema.rs  tags_ops.rs  types.rs
src-tauri/src/core/thumbnail_service_v3/: cache.rs  config.rs  db_index.rs  generators.rs  mod.rs  queue.rs  types.rs  worker.rs
src-tauri/src/core/thumbnail_service_v4/: mod.rs  queue.rs  service.rs  types.rs
src-tauri/src/core/upscale_service/: cache.rs  conditions.rs  config.rs  events.rs  mod.rs  queue.rs  task_processor.rs  types.rs  worker.rs
src-tauri/src/models/: book.rs  mod.rs  settings.rs
src-tauri/src/utils/: lnk_resolver.rs  mod.rs
src-tauri/tests/: directory_stream_perf.rs
(+1168 files in other folders)
