[package]
name = "neoview"
version = "2.4.0"
description = "A simple desktop application template combining Tauri 2 with Svelte 5 and shadcn-svelte with a basic ci/cd implemented."
authors = ["HibernalGlow Veras Vieira"]
license = "MIT"
repository = "HibernalGlow/neoview"
edition = "2021"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.4"
thiserror = "2.0.12"
base64 = "0.22"
image = { version = "0.25.9", features = ["png", "jpeg", "webp", "avif", "gif", "bmp", "ico", "tiff", "tga"] }
jxl-oxide = { version = "0.12.2", features = ["image"] }
zip = "6.0.0"
unrar = "0.5"
sevenz-rust = "0.6"
tempfile = "3.10"
walkdir = "2.5"
threadpool = "1.8"
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std"] }
url = "2.5"
md5 = "0.7.0"
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
pyo3 = { version = "0.22", features = ["auto-initialize"] }
rayon = "1.10"
web-sys = { version = "0.3", features = ["Blob", "Url"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ffmpeg-sidecar = "2.3.0"
uuid = { version = "1", features = ["serde", "v4"] }
num_cpus = "1.16"
rust_search = "2.1.0"
trash = "3.3"
lru = "0.16.2"
lz4_flex = "0.11"
once_cell = "1.19"
epub = "2.1"  # EPUB 解析（纯 Rust）
natural-sort-rs = "0.1"  # 自然排序
# PDF: 前端使用 pdf.js 渲染

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-cli = "2"
