[package]
name = "neoview"
version = "4.6.0"
description = "A simple desktop application template combining Tauri 2 with Svelte 5 and shadcn-svelte with a basic ci/cd implemented."
authors = ["HibernalGlow Veras Vieira"]
license = "MIT"
repository = "HibernalGlow/neoview"
edition = "2021"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[profile.release]
strip = true  # 自动剥离符号表
opt-level = "z"  # 优化体积（可选"s"对比测试）
lto = true  # 启用链接时优化
codegen-units = 1  # 单代码生成单元提升优化空间
panic = "abort"  # 移除panic unwind代码

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.4"
thiserror = "2.0.12"
base64 = "0.22"
image = { version = "0.25.9", features = ["png", "jpeg", "webp", "avif", "gif", "bmp", "ico", "tiff", "tga"] }
jxl-oxide = { version = "0.12.2", features = ["image"] }
zip = "6.0.0"
unrar = "0.5"
sevenz-rust = "0.6"
tempfile = "3.10"
walkdir = "2.5"
threadpool = "1.8"
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std"] }
url = "2.5"
md5 = "0.7.0"
sha1 = "0.10"
hex = "0.4"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
rayon = "1.10"
web-sys = { version = "0.3", features = ["Blob", "Url"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ffmpeg-sidecar = "2.3.0"
uuid = { version = "1", features = ["serde", "v4"] }
num_cpus = "1.16"
rust_search = "2.1.0"
trash = { version = "3.3", features = ["coinit_multithreaded"] }
lru = "0.16.2"
lz4_flex = "0.11"
once_cell = "1.19"
bincode = "1.3"  # 二进制序列化
crc32fast = "1.4"  # 快速 CRC32 校验
dirs = "5.0"  # 系统目录
epub = "2.1"  # EPUB 解析（纯 Rust）
natural-sort-rs = "0.1"  # 自然排序
regex = "1.10"  # 正则表达式支持
sysinfo = "0.32"  # 系统监控

# 性能优化库
jwalk = "0.8"  # 并行目录遍历，比 walkdir 快 5-10x
dashmap = "6.1"  # 无锁并发 HashMap
memmap2 = "0.9"  # 内存映射文件，加速大文件读取
parking_lot = "0.12"  # 更快的 Mutex/RwLock
smallvec = "1.13"  # 小型集合优化，避免堆分配
ahash = "0.8"  # 更快的哈希算法，比 std::hash 快 2-3x
reqwest = { version = "0.12", features = ["json"] }  # HTTP 客户端（Ollama 代理）
tauri-plugin-clipboard-x = "2"  # 系统剪贴板操作（文件复制/粘贴）
mime_guess = "2.0"  # MIME 类型检测
urlencoding = "2.1"  # URL 编解码
# PDF: 前端使用 pdf.js 渲染

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
proptest = "1.4"
